--- a/calculatorTestResults.html
+++ b/calculatorTestResults.html
@@ -11,8 +11,8 @@
     <div id="qunit-fixture">
         <input type="text" id="screen"> </div>
     <script src="https://code.jquery.com/qunit/qunit-2.0.1.js"></script>
-    <script src="tests.js"></script>
-    <script src="calculator.js"></script>
+    <script src="calculator_tests.js"></script>
+    <script src="calculator_start.js"></script>
 </body>
 
 </html>
